--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
     - sudo apt-get update -qq
-    - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5serialport5-dev libqt5webkit5-dev libsqlite3-dev
+    - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+    - git clone git://code.qt.io/qt/qtserialport.git
+    - mkdir qtserialport-build
+    - cd qtserialport-build
+    - qmake ../qtserialport/qtserialport.pro
+    - make
+    - make install
 
 script:
     - qmake -qt=qt5 -v
