--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
     - sudo apt-get update -qq
-    - sudo apt-get install -qq qt5-default qt5-qmake qtbase5-dev qtbase5-private-dev qtdeclarative5-dev libqt5* libsqlite3-dev
+    - sudo apt-get install -qq qt5-default qt5-qmake qtbase5-dev qtbase5-private-dev qtdeclarative5-dev libqt5core5-dev libqt5webkit5-dev libsqlite3-dev
     - git clone git://code.qt.io/qt/qtserialport.git /tmp/qtserialport
     - mkdir /tmp/qtserialport-build
     - cd /tmp/qtserialport-build
