--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,33 @@
-before_install:
-    - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq qt5-default qt5-qmake qtbase5-dev qtbase5-private-dev qtdeclarative5-dev libqt5core5-dev libqt5webkit5-dev libsqlite3-dev
-    - git clone git://code.qt.io/qt/qtserialport.git /tmp/qtserialport
-    - mkdir /tmp/qtserialport-build
-    - cd /tmp/qtserialport-build
-    - qmake ../qtserialport/qtserialport.pro
-    - make
-    - make install
-    - cd -
+language: cpp
 
-script:
-    - qmake -qt=qt5 -v
-    - qmake -qt=qt5
-    - make
+compiler:
+- gcc
+
+env:
+- QT_BASE=48
+- QT_BASE=55
+
+before_install:
+- if [ "$CXX" = "g++" ]; then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y; fi
+- if [ "$QT_BASE" = "48" ]; then sudo add-apt-repository ppa:beineri/opt-qt487 -y; fi
+- if [ "$QT_BASE" = "50" ]; then sudo add-apt-repository ppa:beineri/opt-qt502 -y; fi
+- if [ "$QT_BASE" = "51" ]; then sudo add-apt-repository ppa:beineri/opt-qt511 -y; fi
+- if [ "$QT_BASE" = "52" ]; then sudo add-apt-repository ppa:beineri/opt-qt521 -y; fi
+- if [ "$QT_BASE" = "53" ]; then sudo add-apt-repository ppa:beineri/opt-qt532 -y; fi
+- if [ "$QT_BASE" = "54" ]; then sudo add-apt-repository ppa:beineri/opt-qt541 -y; fi
+- if [ "$QT_BASE" = "55" ]; then sudo add-apt-repository ppa:beineri/opt-qt551 -y; fi
+- sudo apt-get update -qq
+
+install:
+- if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++ gcc; export CXX="g++" CC="gcc"; $CXX --version; fi
+- if [ "$QT_BASE" = "48" ]; then sudo apt-get install -qq opt-qt4-qmake opt-qt4-dev-tools; source /opt/qt-4.8/bin/qt-4.8-env.sh; fi
+- if [ "$QT_BASE" = "50" ]; then sudo apt-get install -qq qtbase; source /opt/qt5/bin/qt5-env.sh; fi
+- if [ "$QT_BASE" = "51" ]; then sudo apt-get install -qq qt51base; source /opt/qt51/bin/qt51-env.sh; fi
+- if [ "$QT_BASE" = "52" ]; then sudo apt-get install -qq qt52base; source /opt/qt52/bin/qt52-env.sh; fi
+- if [ "$QT_BASE" = "53" ]; then sudo apt-get install -qq qt53base; source /opt/qt53/bin/qt53-env.sh; fi
+- if [ "$QT_BASE" = "54" ]; then sudo apt-get install -qq qt54base; source /opt/qt54/bin/qt54-env.sh; fi
+- if [ "$QT_BASE" = "55" ]; then sudo apt-get install -qq qt55base; source /opt/qt55/bin/qt55-env.sh; fi
+
+script: 
+  - qmake -r
+  - make check
