--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 - cd /tmp/qtserialport-build
 - qmake ../qtserialport/qtserialport.pro
 - make
-- make install
+- sudo make install
 - cd -
 
 script: 
