--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,7 @@ install:
 - if [ "$QT_BASE" = "52" ]; then sudo apt-get install -qq qt52base; source /opt/qt52/bin/qt52-env.sh; fi
 - if [ "$QT_BASE" = "53" ]; then sudo apt-get install -qq qt53base; source /opt/qt53/bin/qt53-env.sh; fi
 - if [ "$QT_BASE" = "54" ]; then sudo apt-get install -qq qt54base; source /opt/qt54/bin/qt54-env.sh; fi
-- if [ "$QT_BASE" = "55" ]; then sudo apt-get install -qq qt55base; source /opt/qt55/bin/qt55-env.sh; fi
-- sudo apt-get install -qq libudev-dev
-- git clone git://code.qt.io/qt/qtserialport.git /tmp/qtserialport
-- mkdir /tmp/qtserialport-build
-- cd /tmp/qtserialport-build
-- qmake ../qtserialport/qtserialport.pro
-- make
-- sudo make install
-- cd -
+- if [ "$QT_BASE" = "55" ]; then sudo apt-get install -qq qt55base qt55serialport; source /opt/qt55/bin/qt55-env.sh; fi
 
 script: 
 - qmake -r
