--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 - sudo apt-get update -qq
 
 install:
-- if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++ gcc; export CXX="g++" CC="gcc"; $CXX --version; fi
+- if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.6-arm-linux-gnueabihf gcc-4.6-arm-linux-gnueabihf; export CXX="arm-linux-gnueabihf-g++" CC="arm-linux-gnueabihf-gcc"; $CXX --version; fi
 - if [ "$QT_BASE" = "48" ]; then sudo apt-get install -qq opt-qt4-qmake opt-qt4-dev-tools; source /opt/qt-4.8/bin/qt-4.8-env.sh; fi
 - if [ "$QT_BASE" = "50" ]; then sudo apt-get install -qq qtbase; source /opt/qt5/bin/qt5-env.sh; fi
 - if [ "$QT_BASE" = "51" ]; then sudo apt-get install -qq qt51base; source /opt/qt51/bin/qt51-env.sh; fi
